--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/clarkio/simple-node-server.git"
   },
-  "author": "Josip Neretljak (monte0920)",
+  "author": "Josip Neretljak (monte1s)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/clarkio/simple-node-server/issues"
@@ -25,8 +25,7 @@
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
     "express": "^4.16.0",
-    "nodemon": "^2.0.14",
-    "web3": "^1.8.1"
+    "nodemon": "^2.0.14"
   },
   "devDependencies": {
     "chai": "^4.2.0",
