--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
     "express": "^4.16.0",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "tonweb": "0.0.66"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "nyc": "^14.1.1",
     "snyk": "^1.52.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
