--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.7",
     "applicationinsights": "^1.0.0",
+    "axios": "^1.7.9",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
